fix stoof
